[gd_scene load_steps=2 format=3 uid="uid://773jr7448bx8"]

[ext_resource type="Script" uid="uid://d3gysbwm8dc8u" path="res://component/interactable_component/interactable_component.gd" id="1_4wnlb"]

[node name="InteractableComponent" type="Node2D"]
script = ExtResource("1_4wnlb")

[connection signal="child_entered_tree" from="." to="." method="_on_children_modified"]
[connection signal="child_exiting_tree" from="." to="." method="_on_children_modified"]
